showPicker() method of date input doesn't work https://bugs.webkit.org/show_bug.cgi?id=257308

Reviewed by Aditya Keerthi.

Implement showPicker for date and datetime-local inputs.

* Source/WebCore/html/BaseDateAndTimeInputType.cpp:
(WebCore::BaseDateAndTimeInputType::handleDOMActivateEvent):
(WebCore::BaseDateAndTimeInputType::showPicker):
* Source/WebCore/html/BaseDateAndTimeInputType.h:
* Source/WebCore/html/MonthInputType.cpp:
(WebCore::MonthInputType::showPicker):
* Source/WebCore/html/MonthInputType.h:
* Source/WebCore/html/TimeInputType.cpp:
(WebCore::TimeInputType::showPicker):
* Source/WebCore/html/TimeInputType.h:
* Source/WebCore/html/WeekInputType.cpp:
(WebCore::WeekInputType::showPicker):
* Source/WebCore/html/WeekInputType.h:
* LayoutTests/fast/forms/date/date-show-picker-expected.txt: Added.
* LayoutTests/fast/forms/date/date-show-picker.html: Added.
* LayoutTests/fast/forms/datetimelocal/datetimelocal-show-picker-expected.txt: Added.
* LayoutTests/fast/forms/datetimelocal/datetimelocal-show-picker.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/269257@main