Source/WebCore/html/BaseDateAndTimeInputType.h
@@ -146,6 +146,8 @@ private:
     bool setupDateTimeChooserParameters(DateTimeChooserParameters&);
     void closeDateTimeChooser();
 
+    void showPicker() override;
+
     std::unique_ptr<DateTimeChooser> m_dateTimeChooser;
     RefPtr<DateTimeEditElement> m_dateTimeEditElement;
 };
