Source/WebCore/html/MonthInputType.cpp
@@ -132,6 +132,10 @@ void MonthInputType::handleDOMActivateEvent(Event&)
 {
 }
 
+void MonthInputType::showPicker()
+{
+}
+
 bool MonthInputType::isValidFormat(OptionSet<DateTimeFormatValidationResults> results) const
 {
     return results.containsAll({ DateTimeFormatValidationResults::HasYear, DateTimeFormatValidationResults::HasMonth });
